centered text in the dialog boxes

--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
     margin: 20px;
 }
 #buttons {
